--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.10.1"
+    "@astrojs/alpinejs": "^0.4.8",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.14.9",
+    "astro": "^5.10.1",
+    "astro-icon": "^1.1.5",
+    "flyonui": "^2.2.0",
+    "swiper": "^11.2.10",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.19"
   }
 }
