--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.10.1",
     "astro-icon": "^1.1.5",
     "flyonui": "^2.2.0",
+    "sharp": "^0.34.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
